[tool.poetry]
name = "open_covid19"
version = "0.1.0"
description = ""
authors = ["Jordan Poles <jpdev.noreply@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.1"
numpy = "^1.18.1"
scipy = "^1.4.1"
scikit-learn = "^0.22.2"
jupyter = "^1.0.0"
ipykernel = "^5.1.4"
cufflinks = "^0.17.3"
ipywidgets = "^7.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
